# WB_Python_task_one

./: Python_Task1.ipynb  README.md  pyproject.toml
